# postgres-s3-backup

./: Dockerfile  README.md  backup.py  config.py  docker-compose.yml  pyproject.toml  requirements.txt  telegram_notify.py
.github/workflows/: build.yml  mysql-build.yml
backup/: log_pipe.py  telegram_notify.py
